Adding an image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 <div class="box">
-  <img src="profile.jpg" alt="" class="box-img">
+  <img src="my image.png" alt="" class="box-img">
   <h1>Charles K Tyrrell</h1>
 <h5>Computer science - Biology dual major
 </h5>
