--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 								<p>Another fine freebie by HTML5 UP</p>
 							</header>
 							<footer>
-								<a href="#banner" class="button circled scrolly">Start</a>
+								<a href="#banner" class="button circled scrolly">Buttholes</a>
 							</footer>
 						</div>
 
@@ -63,7 +63,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>Hi. You're looking at my hairy balls<strong>Helios</strong>.</h2>
+						<h2>Hi MF. You're looking at my hairy <strong>BALLS</strong>.</h2>
 						<p>
 							A (free) responsive site template by <a href="http://html5up.net">HTML5 UP</a>.
 							Built with HTML5/CSS3 and released under the <a href="http://html5up.net/license">CCA</a> license.
@@ -76,7 +76,7 @@
 					<div class="reel">
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/IMG_0517.jpg" alt="" /></a>
 							<header>
 								<h3><a href="#">Pulvinar sagittis congue</a></h3>
 							</header>
