--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 					<header>
 						<h2>Hi MF. You're looking at my hairy <strong>BALLS</strong>.</h2>
 						<p>
-							A (free) responsive site template by <a href="http://html5up.net">HTML5 UP</a>.
-							Built with HTML5/CSS3 and released under the <a href="http://html5up.net/license">CCA</a> license.
+							A (gay ass) responsive site template for butts <a href="http://html5up.net">HTML5 UP</a>.
+							Built with butts and released under the <a href="http://html5up.net/license">CCA</a> butt.
 						</p>
 					</header>
 				</section>
@@ -78,7 +78,7 @@
 						<article>
 							<a href="#" class="image featured"><img src="images/IMG_0517 (1).jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Pulvinar sagittis congue</a></h3>
+								<h3><a href="#">Pulverize my anus</a></h3>
 							</header>
 							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
 						</article>
