--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Robbie Brewer</a></h1>
+								<h1><a href="index.html" id="logo">Big Brainium Games</a></h1>
 								<hr />
-								<p>Another fine freebie by HTML5 UP</p>
+								<p>Let the Games Begin</p>
 							</header>
 							<footer>
-								<a href="#banner" class="button circled scrolly">Buttholes</a>
+								<a href="#banner" class="button circled scrolly">Don't Panic</a>
 							</footer>
 						</div>
 
@@ -35,11 +35,11 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Dropdown</a>
+									<a href="#">Board Games</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
+										<li><a href="#">Chaotic Chess</a></li>
+										<li><a href="#">Global Chess</a></li>
+										<li><a href="#">Knights of the Regular Table</a></li>
 										<li>
 											<a href="#">And a submenu &hellip;</a>
 											<ul>
