--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 								<p>Let the Games Begin</p>
 							</header>
 							<footer>
-								<a href="#banner" class="button circled scrolly">Don't Panic</a>
+								<a href="#banner" class="button circled scrolly">Don't_Panic</a>
 							</footer>
 						</div>
 
@@ -35,13 +35,13 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Board Games</a>
+									<a href="#">Big Brainium Board Games</a>
 									<ul>
 										<li><a href="#">Chaotic Chess</a></li>
 										<li><a href="#">Global Chess</a></li>
 										<li><a href="#">Knights of the Regular Table</a></li>
 										<li>
-											<a href="#">And a submenu &hellip;</a>
+											<a href="#"> Add a submenu bitch &hellip;</a>
 											<ul>
 												<li><a href="#">Lorem ipsum dolor</a></li>
 												<li><a href="#">Phasellus consequat</a></li>
@@ -52,8 +52,8 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
+								<li><a href="left-sidebar.html">Art by Robbie</a></li>
+								<li><a href="right-sidebar.html">Engineering Projects</a></li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
 							</ul>
 						</nav>
