--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Big Brainium Board Games</a>
+									<a href="#">Board Games</a>
 									<ul>
 										<li><a href="#">Chaotic Chess</a></li>
 										<li><a href="#">Global Chess</a></li>
@@ -54,7 +54,7 @@
 								</li>
 								<li><a href="left-sidebar.html">Art by Robbie</a></li>
 								<li><a href="right-sidebar.html">Engineering Projects</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="no-sidebar.html">About Me</a></li>
 							</ul>
 						</nav>
 
@@ -63,10 +63,9 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>Hi MF. You're looking at my hairy <strong>BALLS</strong>.</h2>
+						<h2>Latest <strong>Projects</strong>.</h2>
 						<p>
-							A (gay ass) responsive site template for butts <a href="http://html5up.net">HTML5 UP</a>.
-							Built with butts and released under the <a href="http://html5up.net/license">CCA</a> butt.
+							Original art and Ideas by Robbie Brewer </a>.
 						</p>
 					</header>
 				</section>
@@ -78,49 +77,49 @@
 						<article>
 							<a href="#" class="image featured"><img src="images/IMG_0517 (1).jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Pulverize my anus</a></h3>
+								<h3><a href="#">Global Chess</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>Chess with a non-euclidean twist. Attack from both sides on a Spherical grid.</p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Fermentum sagittis proin</a></h3>
+								<h3><a href="#">Chaotic Chess</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>A Modular Chess varient that is Chaotic fun for beginners and masters alike</p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Sed quis rhoncus placerat</a></h3>
+								<h3><a href="#"Knights Templarky</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>A one of it's kind board manipulation strategy game</p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Ultrices urna sit lobortis</a></h3>
+								<h3><a href="#">Merchandise</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>Check out stickers, hoodies and other art made by Robbie Brewer</p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Varius magnis sollicitudin</a></h3>
+								<h3><a href="#">Collapsible Bike Handlebar</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>A mechanism that attaches to bicycle handlebars to offer multiple riding positions for better ergonomics</p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Pulvinar sagittis congue</a></h3>
+								<h3><a href="#">Cross Country Running Vehicle</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>A gear hauling solution for self-sufficient multi-day running events</p>
 						</article>
 
 						<article>
