--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Robbie Brewer by suck on this flacid wiener</title>
+		<title>Robbie Brewer's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -23,10 +23,10 @@
 							<header>
 								<h1><a href="index.html" id="logo">Big Brainium Games</a></h1>
 								<hr />
-								<p>Let the Games Begin</p>
+								<p>My Portfolio</p>
 							</header>
 							<footer>
-								<a href="#banner" class="button circled scrolly">Don't_Panic</a>
+								<a href="#banner" class="button circled scrolly">Don't_Panic</a></li>
 							</footer>
 						</div>
 
@@ -52,9 +52,9 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Art by Robbie</a></li>
+								<li><a href="left-sidebar.html">Education & Employment History</a></li>
 								<li><a href="right-sidebar.html">Engineering Projects</a></li>
-								<li><a href="no-sidebar.html">About Me</a></li>
+								<li><a href="no-sidebar.html">Art by Robbie</a></li>
 							</ul>
 						</nav>
 
