--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Big Brainium Games</a></h1>
+								<h1><a href="index.html" id="logo">Robbie Brewer</a></h1>
 								<hr />
 								<p>My Portfolio</p>
 							</header>
@@ -65,7 +65,7 @@
 					<header>
 						<h2>Latest <strong>Projects</strong>.</h2>
 						<p>
-							Original art and Ideas by Robbie Brewer </a>.
+							This is what I like to spend my time on </a>.
 						</p>
 					</header>
 				</section>
