--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<div class="reel">
 
 						<article>
-							<a href="#" class="image featured"><img src="images/IMG_0517 (1).jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/pic01.jpeg" alt="" /></a>
 							<header>
 								<h3><a href="#">Global Chess</a></h3>
 							</header>
