--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<header>
 						<h2>Latest <strong>Projects</strong>.</h2>
 						<p>
-							This is what I like to spend my time on </a>.
+							Sorry I'm late I was working on...</a>
 						</p>
 					</header>
 				</section>
@@ -73,6 +73,22 @@
 			<!-- Carousel -->
 				<section class="carousel">
 					<div class="reel">
+						
+						<article>
+							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+							<header>
+								<h3><a href="#">Multi-Position Bike Handlebar</a></h3>
+							</header>
+							<p>A mechanism that attaches to bicycle handlebars to offer multiple riding positions for better ergonomics</p>
+						</article>
+						
+						<article>
+							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+							<header>
+								<h3><a href="#">Compliant Braking Device</a></h3>
+							</header>
+							<p>Compliant Mechanism designed to limit velocity over a large range of loading conditions</p>
+						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic01.jpeg" alt="" /></a>
@@ -111,7 +127,7 @@
 							<header>
 								<h3><a href="#">Collapsible Bike Handlebar</a></h3>
 							</header>
-							<p>A mechanism that attaches to bicycle handlebars to offer multiple riding positions for better ergonomics</p>
+							<p>booogiewoogie</p>
 						</article>
 
 						<article>
