--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 						<article>
 							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							<header>
-								<h3><a href="Bike-Handlebar.html">Multi-Position Bike Handlebar</a></h3>
+								<h3><a href="Bike Handlebar.html">Multi-Position Bike Handlebar</a></h3>
 							</header>
 							<p>A mechanism that attaches to bicycle handlebars to offer multiple riding positions for better ergonomics</p>
 						</article>
